# gilcloud-app

./: .env  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.vue  main.ts  vite-env.d.ts
src-backend/: Cargo.toml
src-backend/src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs
src/assets/: file-types.json  index.css
src/components/: Loader.vue  Login.vue
src/components/filemanager/: DirectoryContent.vue  File.vue  Folder.vue  NewFolder.vue  UploadDialog.vue
src/components/media/: AudioPlayer.vue  BackgroundPlayer.vue  FileView.vue  ImageViewer.vue  VideoPlayer.vue
src/components/ui/: BannerLink.vue
src/helper/: audioplayer.ts  videoplayer.ts
src/router/: index.ts
src/service/: movies.ts
src/stores/: app.ts  background-player.ts
src/types/: jsmediatags.d.ts  videojs-hls-quality-selector.d.ts  videojs.d.ts
src/util/: anim.ts  browser.ts  fileTypes.ts  fileformats.ts  linkGen.ts  textFormats.ts
src/views/: FileManager.vue  Movies.vue  VirtualMachines.vue
src/volt/: ProgressBar.vue  Toast.vue
