[package]
name = "gilcloud-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gilcloud_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web = "4"
dunce = "1.0"
actix-multipart = "0.4"
actix-files = "0.6.6"
actix-cors = "0.7.1"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
argon2 = "0.5.3"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
sanitize-filename = { version = "0.6.0" }
anyhow = "1.0.98"
lofty = { version = "0.19" }
base64 = "0.22"
urlencoding = "2.1.3"
